fix: layout shift when loading page swittches

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,7 @@
     height: 100dvh;
     overflow: auto;
     touch-action: pan-x pan-y;
+    scrollbar-gutter: stable;
   }
 
   /* latin */
